fix: updated the index.html and removed border of hero section

--- a/assignment6/portfolio.html
+++ b/assignment6/portfolio.html
@@ -18,10 +18,7 @@
   >
     <div class="container-fluid p-0">
       <!-- Hero Section Start -->
-      <div
-        class="container-fluid p-0 border border-danger overflow-hidden"
-        style="height: 100vh"
-      >
+      <div class="container-fluid p-0 overflow-hidden" style="height: 100vh">
         <div class="position-absolute top-50" style="margin-left: 100px">
           <h1 class="fw-600 fs-1">Himal Tamang</h1>
           <p>Web Developer Trainee</p>
