--- a/index.html
+++ b/index.html
@@ -12,8 +12,17 @@
     />
   </head>
   <body>
-    <h2>Hello, Himal Tamang</h2>
-
+    <section class="container py-5">
+      <h2>Assignment Links:</h2>
+      <div class="d-flex flex-column fs-3 gap-5">
+        <a href="/assignment1/utilityclass.html">1. assignment 1</a>
+        <a href="/assignment2/basicform.html">2. assignment 2</a>
+        <a href="/assignment3/card.html">3. assignment 3</a>
+        <a href="/assignment4/navbar.html">4. assignment 4</a>
+        <a href="/assignment5/carousel.html">5. assignment 5</a>
+        <a href="/assignment6/portfolio.html"> 6. assignment 6</a>
+      </div>
+    </section>
     <!-- bootstrap scripts -->
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
