fix: updated the image directory

--- a/assignment3/card.html
+++ b/assignment3/card.html
@@ -24,7 +24,7 @@
         >
           <div class="card" style="height: fit-content">
             <img
-              src="/assets/card1.png"
+              src="/bootstrap/assets/card1.png"
               alt="image at the top"
               class="card-img-top"
               style="
@@ -58,7 +58,7 @@
         >
           <div class="card" style="height: fit-content">
             <img
-              src="/assets/card2.png"
+              src="/bootstrap/assets/card2.png"
               alt="image at the top"
               class="card-img-top"
               style="
@@ -92,7 +92,7 @@
         >
           <div class="card" style="height: fit-content">
             <img
-              src="/assets/card3.png"
+              src="/bootstrap/assets/card3.png"
               alt="image at the top"
               class="card-img-top"
               style="
@@ -126,7 +126,7 @@
         >
           <div class="card" style="height: fit-content">
             <img
-              src="/assets/card4.png"
+              src="/bootstrap/assets/card4.png"
               alt="image at the top"
               class="card-img-top"
               style="
