--- a/assignment4/navbar.html
+++ b/assignment4/navbar.html
@@ -28,7 +28,7 @@
         <div class="container-fluid">
           <a href="#" class="navbar-brand">
             <img
-              src="/assets/logo/logo.png"
+              src="/bootstrap/assets/logo/logo.png"
               alt="logo"
               class="border-none rounded-circle overflow-hidden"
               style="height: 80px; width: 80px"
