--- a/assignment5/carousel.html
+++ b/assignment5/carousel.html
@@ -31,7 +31,7 @@
             <div class="carousel-inner">
               <div class="carousel-item active">
                 <img
-                  src="/assets/card1.png"
+                  src="/bootstrap/assets/card1.png"
                   class="d-block w-100 object-fit-cover"
                   alt="image 1"
                 />
@@ -139,7 +139,7 @@
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="/assets/card4.png"" class="d-block w-100
+                <img src="/bootstrap/assets/card4.png"" class="d-block w-100
                 object-fit-cover" alt="image 2" />
                 <div
                   class="text-dark top-50 position-absolute d-flex flex-column justify-content-center align-items-center w-100 px-4 text-center"
@@ -245,7 +245,7 @@
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="/assets/card3.png"" class="d-block w-100
+                <img src="/bootstrap/assets/card3.png"" class="d-block w-100
                 object-fit-cover" alt="image 3" />
                 <div
                   class="text-dark top-50 position-absolute d-flex flex-column justify-content-center align-items-center w-100 px-4 text-center"
