--- a/assignment6/portfolio.html
+++ b/assignment6/portfolio.html
@@ -27,7 +27,7 @@
           </button>
         </div>
         <img
-          src="/assets/background.jpg"
+          src="/bootstrap/assets/background.jpg"
           alt="hero section image of himal portfolio"
           style="
             height: 100%;
@@ -48,7 +48,7 @@
         <div class="row g-5">
           <div class="image-wrapper col-12 col-lg-6">
             <img
-              src="/assets/card1.png"
+              src="/bootstrap/assets/card1.png"
               alt="this is himal profile picture"
               style="
                 object-fit: cover;
@@ -107,7 +107,7 @@
           <div class="col-12 col-md-6 col-lg-8 row-cols-1">
             <div class="card">
               <img
-                src="/assets/card1.png"
+                src="/bootstrap/assets/card1.png"
                 class="card-img-top"
                 alt="project one image"
               />
@@ -127,7 +127,7 @@
           <div class="col-12 col-md-6 col-lg-4">
             <div class="card h-100">
               <img
-                src="/assets/card1.png"
+                src="/bootstrap/assets/card1.png"
                 class="card-img-top"
                 alt="project one image"
               />
@@ -147,7 +147,7 @@
           <div class="col-12 col-md-6 col-lg-4">
             <div class="card">
               <img
-                src="/assets/card1.png"
+                src="/bootstrap/assets/card1.png"
                 class="card-img-top"
                 alt="project one image"
               />
@@ -166,7 +166,7 @@
           <div class="col-12 col-md-6 col-lg-4">
             <div class="card">
               <img
-                src="/assets/card1.png"
+                src="/bootstrap/assets/card1.png"
                 class="card-img-top"
                 alt="project one image"
               />
@@ -186,7 +186,7 @@
           <div class="col-12 col-md-6 col-lg-4">
             <div class="card">
               <img
-                src="/assets/card1.png"
+                src="/bootstrap/assets/card1.png"
                 class="card-img-top"
                 alt="project one image"
               />
